[package]
name = "js2cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
iced-x86 = { version = "1.18.0", features = ["code_asm"] }
oxc_parser = "0.0.5"
oxc_ast = "0.0.5"
oxc_allocator = "0.0.1"
miette = { version = "5.7.0", features = ["fancy"] }
object = { version = "0.30.3", features = ["write"] }